commit test and push

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--TEST -->
     <Button
         android:id="@+id/button_track"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="My Track items"
+        android:text="@string/my_track_items"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
